<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/background_loadapp"
    android:padding="10dp"
    tools:context=".HealthActivity">


    <ImageView
        android:id="@+id/imgBtnHealth"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_shadow"
        android:gravity="center"
        android:padding="10dp"
        android:src="@drawable/icon_health"
        app:layout_constraintBottom_toTopOf="@+id/InputHealth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/HealthTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/corben"
        android:gravity="center_horizontal"
        android:text="@string/health"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/InputHealth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/imgBtnHealth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/InputHealth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/HealthTitleTxt"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/health_input_bg"
        android:gravity="top"
        android:hint="@string/insertTxt"
        android:inputType="textMultiLine"
        android:lines="13"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_back_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_buttons"
        android:text="@string/backDialog"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm_health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputHealth" />


    <Button
        android:id="@+id/btn_confirm_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_buttons"
        android:text="@string/confirmDialog"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back_health"
        app:layout_constraintTop_toBottomOf="@+id/InputHealth" />




</androidx.constraintlayout.widget.ConstraintLayout>