<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:padding="10dp"
    android:background="@drawable/background_loadapp"
    tools:context=".SnackActivity">


    <ImageView
        android:id="@+id/imgBtnSnack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:background="@drawable/border_shadow"
        android:gravity="center"
        android:padding="10dp"
        android:src="@drawable/icon_lanche"
        app:layout_constraintBottom_toTopOf="@+id/chooseTxtSnack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/SnackTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/corben"
        android:gravity="center_horizontal"
        android:text="@string/snack"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chooseTxtSnack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toEndOf="@+id/imgBtnSnack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />


    <TextView
        android:id="@+id/chooseTxtSnack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/chooseTxtLunch"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupSnack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_back_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/border_buttons"
        android:layout_marginTop="30dp"
        android:text="@string/backDialog"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm_health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSnack" />

    <Button
        android:id="@+id/btn_confirm_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_buttons"
        android:text="@string/confirmDialog"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back_health"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupSnack" />

    <RadioGroup
        android:id="@+id/radioGroupSnack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/btn_satisfied"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/btn_bad"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="left"
            android:background="@drawable/ic_satisfied_selector"
            android:button="@color/white"
            android:onClick="onRadioButtonClickedd"
            android:padding="16dp"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_neutral"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_satisfied_pressed" />

        <RadioButton
            android:id="@+id/btn_neutral"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/btn_satisfied"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/ic_neutral_selector"
            android:button="@color/white"
            android:onClick="onRadioButtonClickedd"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_bad"
            app:layout_constraintStart_toEndOf="@+id/btn_satisfied"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_neutral" />

        <RadioButton
            android:id="@+id/btn_bad"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right"
            android:background="@drawable/ic_dissatisfied_selector"
            android:button="@color/white"
            android:onClick="onRadioButtonClickedd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toEndOf="@+id/btn_neutral"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dissatisfied" />


    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>