<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/background_loadapp"
    tools:context=".DiaperActivity">


    <ImageView
        android:id="@+id/imgBtnDiaper"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/border_shadow"
        android:padding="10dp"
        android:src="@drawable/ic_change_diaper"
        app:layout_constraintBottom_toTopOf="@+id/chooseTxtDiaper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
            android:id="@+id/DiaperTitleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/corben"
            android:gravity="center_horizontal"
            android:text="Muda de fralda"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/chooseTxtDiaper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toEndOf="@+id/imgBtnDiaper"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.564"/>


    <TextView
        android:id="@+id/chooseTxtDiaper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/chooseOptions"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_pee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/btn_poo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="Cocó (Sanita)"
        android:textSize="17dp"
        android:textStyle="bold"
        android:fontFamily="@font/corben"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <CheckBox
        android:id="@+id/btn_pee"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:text="Xixi"
        android:textSize="17dp"
        android:textStyle="bold"
        android:fontFamily="@font/corben"
        app:layout_constraintBottom_toTopOf="@+id/btn_poo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <CheckBox
        android:id="@+id/btn_poo_diaper"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_bad"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Cocó (Fralda)"
        android:textSize="17dp"
        android:fontFamily="@font/corben"
        android:textStyle="bold"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_poo" />

    <Button
        android:id="@+id/btn_confirm_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_buttons"
        android:text="@string/confirmDialog"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back_health"
        app:layout_constraintTop_toBottomOf="@+id/btn_poo_diaper" />

    <Button
        android:id="@+id/btn_back_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_buttons"
        android:text="@string/backDialog"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm_health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_poo_diaper" />


</androidx.constraintlayout.widget.ConstraintLayout>